egress-app2-static-gateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
      annotations:
        kubernetes.azure.com/static-gateway-configuration: mydemo-static-gateway-config
    spec:
      containers:
      - name: app
        image: nginx:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
